tests/baselines/reference/commentOnAmbientModule(strict=true).errors.txt
a.ts(8,14): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
b.ts(4,9): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== b.ts (1 errors) ====
    ///<reference path="a.ts"/>
    declare module E {
        class foobar extends D.bar {
            foo();
            ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        }
    }
==== a.ts (1 errors) ====
    /*!=========
        Keep this pinned comment
       =========
    */
    
    /*! Don't keep this pinned comment */
    declare module C {
        function foo();
                 ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    // Don't keep this comment.
    declare module D {
        class bar { }
    }
    